# crsf-radio-proxy

./: .gitignore  2test_crsf.py  CMakeLists.txt  LICENSE  README.md  build.sh  install_picotool.sh  setup.sh  test_crsf.py
src/: channelmap.h  main.c  tusb_config.h  usb_descriptors.c
src/crsf/: crsf.c  crsf.h
